# ComponentEngine

./: CMakeLists.txt  Report.docx
ComponentEngine/: CMakeLists.txt
ComponentEngine-demo/: CMakeLists.txt  CornellBoxSpheres.xml  GameInstance.xml  NormalDebug.xml  Scene.xml  ShinyFloor.xml  Trees.xml  imgui.ini  test.h264  test.xml
ComponentEngine-demo/Resources/Models/: Castle.mtl  CrackedPlatform.mtl  Lamppost.mtl  LetterBlock.mtl  cube.mtl  cube1.mtl  cube2.mtl  floor.mtl  skybox2.mtl  skyscraper.mtl  sphere.mtl  teapot.mtl  untitled.mtl
ComponentEngine-demo/Resources/Models/Blocks/: LetterBlockA.mtl  LetterBlockB.mtl  LetterBlockC.mtl  LetterblockD.mtl
ComponentEngine-demo/Resources/Models/CornellBox/: CornellBox-Empty-RG.mtl
ComponentEngine-demo/Resources/Models/Head/: Head.mtl
ComponentEngine-demo/Resources/Models/MedievalBuilding/: Medieval_building.mtl  sphere.mtl
ComponentEngine-demo/Resources/Models/PBR Ball/: sphere.mtl
ComponentEngine-demo/Resources/Models/Trees/: CHANGELOG.txt  FancyTree.mtl  README.txt
ComponentEngine-demo/Resources/OldModels/: Lamppost.mtl  al.mtl  cessna.mtl  skybox.mtl
ComponentEngine-demo/Resources/OldModels/Blocks/: LetterBlockA.mtl  LetterBlockC.mtl  LetterblockE.mtl
ComponentEngine-demo/Resources/OldModels/MedievalBuilding/: Medieval_building.mtl
ComponentEngine-demo/Resources/Resources/: cube.mtl
ComponentEngine-demo/Resources/Textures/Concrete20/: room.blend  room.mtl
ComponentEngine-demo/Resources/Textures/Metal/: sphere.blend  sphere.mtl
ComponentEngine-demo/Resources/Textures/Planks/: sphere.mtl  untitled.blend  untitled.blend1
ComponentEngine-demo/Resources/Textures/Tiles32/: sphere.mtl
ComponentEngine-demo/Resources/Textures/Wood/: sphere.mtl
ComponentEngine-demo/Resources/scenes/: cube.mtl  cube_multi.mtl
ComponentEngine-demo/Scenes/: GameInstance.xml
ComponentEngine-demo/Shaders/Compute/: comp.spv  shader.comp
ComponentEngine-demo/Shaders/Compute/Particle/: comp.spv  shader.comp
ComponentEngine-demo/Shaders/Compute/Test/: comp.spv  shader.comp
ComponentEngine-demo/Shaders/Compute/Vec4Scale/: comp.spv  shader.comp
ComponentEngine-demo/Shaders/Default/: comp.spv  frag.spv  shader.frag  shader.vert  vert.spv
ComponentEngine-demo/Shaders/ImGUI/: frag.spv  run.bat  shader.frag  shader.vert  vert.spv
ComponentEngine-demo/Shaders/ImGUI/Editor/: frag.spv  shader.frag
ComponentEngine-demo/Shaders/ImGUI/Release/: frag.spv  run.bat  shader.frag
ComponentEngine-demo/Shaders/ParticalEffect/: comp.spv  geom.spv  run.bat  shader.comp  shader.frag  shader.geom  shader.vert  vert.spv
ComponentEngine-demo/Shaders/Raytrace/: HitgroupHelpers.glsl  Maths.glsl  Structures.glsl  glass.rchit  global_illumination_miss.rmiss  gradient_miss.rmiss  light_color.rchit  opaque_pbr_hit.rchit  pbr_hit - Copy.rchit  pbr_hit-old.rchit  pbr_hit.rchit  raygen.rgen  reset_buffer.comp  run.bat  sample_texture_create.comp  shadow_miss.rmiss  textured.rchit  translucent_pbr_hit.rchit  transparent_pbr_hit.rchit
ComponentEngine-demo/Shaders/Raytrace/Textured/: closesthit.rchit  rchit.spv
ComponentEngine-demo/Shaders/Raytrace/shader_build/: comp.reset_buffer  comp.sample_texture_create  rchit.color_hit  rchit.glass  rchit.light_color  rchit.opaque_pbr_hit  rchit.pbr_hit  rchit.textured  rchit.translucent_pbr_hit  rchit.transparent_pbr_hit  rgen.raygen  rmiss.global_illumination_miss  rmiss.gradient_miss  rmiss.shadow_miss
ComponentEngine-demo/Shaders/RaytraceOld/Textured/: rchit.spv  run.bat
ComponentEngine-demo/Shaders/RaytraceOld2/: HitgroupHelpers.glsl  Maths.glsl  pbr_hit.rchit  run.bat  shadow_miss.rmiss
ComponentEngine-demo/Shaders/RaytraceOld2/shader_build/: rchit.glass  rchit.light_color  rchit.pbr_hit  rchit.textured  rmiss.gradient_miss
ComponentEngine-demo/Shaders/Textured/: frag.spv  shader.frag  shader.vert  vert.spv
ComponentEngine-demo/Shaders/TexturedLighting/: frag.spv  shader.frag  shader.vert  vert.spv
ComponentEngine-demo/debug-bin/: EditorUI.ini  UI.ini  imgui.ini  libx264.def
ComponentEngine-demo/include/: BlockMoveController.hpp  BlockSpawner.hpp  CameraDolly.hpp  Flamable.hpp  ItemHover.hpp  KeyboardMovment.hpp  MouseDrag.hpp  MouseMovment.hpp  Rotate.hpp  TeapotController.hpp  TimedDestruction.hpp  WaterSourceController.hpp
ComponentEngine-demo/src/: BlockMoveController.cpp  BlockSpawner.cpp  CameraDolly.cpp  Flamable.cpp  ItemHover.cpp  KeyboardMovment.cpp  MouseDrag.cpp  MouseMovment.cpp  Rotate.cpp  TeapotController.cpp  TimedDestruction.cpp  WaterSourceController.cpp  main.cpp
ComponentEngine/include/: x264_capture.h
ComponentEngine/include/ComponentEngine/: Common.hpp  DefaultMeshVertex.hpp  Engine.hpp  PhysicsWorld.hpp  TemplateType.hpp  ThreadHandler.hpp  ThreadManager.hpp  Type.hpp  UI.hpp  UIManager.hpp  obj_loader.h  pugixml.hpp
ComponentEngine/include/ComponentEngine/Components/: BoxCollision.hpp  Camera.hpp  ComponentMessages.hpp  ICollisionShape.hpp  IO.hpp  Indestructable.hpp  Light.hpp  Logic.hpp  Mesh.hpp  MsgRecive.hpp  MsgSend.hpp  ParticalSystem.hpp  Renderer.hpp  Rigidbody.hpp  SphereCollision.hpp  TransferBuffers.hpp  Transformation.hpp  UI.hpp
ComponentEngine/include/ComponentEngine/DataStructure/: LinkedList.hpp
ComponentEngine/include/ComponentEngine/Events/: KeyboardEvent.hpp  MouseEvent.hpp
ComponentEngine/include/ComponentEngine/UI/: ComponentHierarchy.hpp  Console.hpp  EditorState.hpp  Explorer.hpp  (+8 more)
ComponentEngine/src/: Common.cpp  Engine.cpp  PhysicsWorld.cpp  ThreadHandler.cpp  ThreadManager.cpp  UI.cpp  UIManager.cpp  obj_loader.cpp  pugixml.cpp  x264_capture.cpp
ComponentEngine/src/Components/: BoxCollision.cpp  Camera.cpp  ICollisionShape.cpp  Indestructable.cpp  Light.cpp  Mesh.cpp  MsgRecive.cpp  MsgSend.cpp  ParticalSystem.cpp  Renderer.cpp  Rigidbody.cpp  SphereCollision.cpp  Transformation.cpp  UI.cpp
ComponentEngine/src/UI/: ComponentHierarchy.cpp  Console.cpp  EditorState.cpp  Explorer.cpp  MenuElement.cpp  PlayWindow.cpp  SceneHierarchy.cpp  SceneWindow.cpp  Threading.cpp  UIBase.cpp  UIManager.cpp  UITemplate.cpp
(+159 files in other folders)
